app/DeploymentConfig-template.yaml
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  selfLink: >-
    /apis/apps.openshift.io/v1/namespaces/${NAMESPACE}/deploymentconfigs/docker-mautic-noroot
  name: ${INSTANCE}-mautic
  namespace: ${NAMESPACE}
  labels:
    app: ${INSTANCE}-mautic
    app.kubernetes.io/component: ${INSTANCE}-mautic
    app.kubernetes.io/instance: ${INSTANCE}-mautic
    app.openshift.io/runtime-namespace: ${NAMESPACE}
spec:
  strategy:
    type: Recreate
    recreateParams:
      timeoutSeconds: 600
    resources: {}
    activeDeadlineSeconds: 21600
  triggers:
    - type: ConfigChange
  replicas: 1
  revisionHistoryLimit: 10
  test: false
  selector:
    app: ${INSTANCE}-mautic
    deploymentconfig: ${INSTANCE}-mautic
  template:
    metadata:
      labels:
        app: ${INSTANCE}-mautic
        deploymentconfig: ${INSTANCE}-mautic
    spec:
      volumes:
        - name: ${INSTANCE}-mautic-config
          persistentVolumeClaim:
            claimName: ${INSTANCE}-mautic-config
        - name: ${INSTANCE}-mautic-media
          persistentVolumeClaim:
            claimName: ${INSTANCE}-mautic-media
      containers:
        - name: docker-mautic-noroot
          image: >-
            docker-remote.artifacts.developer.gov.bc.ca/jeremyvernon/docker-mautic-noroot:v04
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
          imagepullSecrets:
            - name: dockerhub-artifactory
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
